# finance_gpt

./: .editorconfig  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: release.yml  test.yml
finance_gpt/: __init__.py  __main__.py  bot.py  google_table.py  gpt.py  sql_utils.py
